--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 <div class="col-md-4 wp4">
   <div class="overlay-effect effects clearfix">
     <div class="img">
-      <img src="img/antarctica.jpg" class="grayscale" alt="Blog Item"> <!-- Blog Image -->
+      <img src="img/antarctica.JPG" class="grayscale" alt="Blog Item"> <!-- Blog Image -->
     </div>
   </div>
   <br>
@@ -349,7 +349,7 @@
     <a href="/blog/creative-minds">Antarctic Trip</a> <!-- Headline -->
   </h2>
   <p>
-    I will be joining the Polar Engineering Research Group on their 2023 Antarctic summer cruise.
+    I will be joining the Test Polar Engineering Research Group on their 2023 Antarctic summer cruise.
       This opportunity was offered to me as a bonus for my MSc dissertation field of research,
       and I am looking forward to the chance to work with this renowned group and make a meaningful
       contribution to their research. I am confident that my studies and experience in the field of engineering
