image is working

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         a positive impact </p><br><!-- About Text 2 -->
 				</div>
 				<div class="col-md-6 nopadding features-intro-img">
-					<div class="about-image" style="background-image:url(img/websiteimage.JPG)"></div><!-- about image 2 -->
+					<div class="about-image" style="background-image:url(img/websiteimage.png)"></div><!-- about image 2 -->
 				</div>
 			</div>
 			<!-- About 3 -->
