make heading black

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-1 inner">
                   <h1 class="animated fadeInDown">
-                    <span style="color:#FFFFFF;">S</span><span style="color:#FFE800;">t</span><span style="color:#FFFFFF;">even</span><br/>
+                    <span style="color:#000000;">S</span><span style="color:#FFE800;">t</span><span style="color:#000000;">even</span><br/>
                     <span>M<span style="color:#E04343">c</span>Ewen</span>
                   </h1><!-- Title -->
                   <h3 class="animated fadeInUp delay-05s"><span class="rotate">Web developer,Msc Engineering graduate,Python dev</span></h3><!-- Text Rotator -->
